# Sreality-scrapper

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  links.txt  setup.cfg  setup.py
src/sreality_scrapper/: __main__.py
