[metadata]
name = sreality-scrapper
version = 1.0
author = Petr Kubelka
author-email = ksonny4@gmail.com
home-page = https://github.com/ksonny4/{name}
description = Quick save of Sreality offer
license = MIT
platform = any
keywords = Sreality, Playwright
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.8

package_dir=
    =src

packages=find_namespace:

install_requires =
    playwright == 0.8.0
    
[options.packages.find]
where=src

[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[check]
metadata = true
restructuredtext = true
strict = true

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions


[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
